--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.5",
-    "apollo-server-express": "^3.8.1"
+    "apollo-server-express": "^3.8.1",
+    "graphql": "^16.5.0"
   }
 }
