--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://127.0.0.1:3000",
+  "proxy": "http://localhost:3001",
   "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
